--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "bootstrap": "^4.5.0",
+    "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
